# Parser_HH-SJ

./: .flake8  .gitignore  m2test.py  pyproject.toml  shab.py  tttt.py
parser_vacancies/: json_hh.json  json_js.json  main.py  vacancies.json
src/: hh.py  json_saver.py  site_api.py  sj.py  vacancy.py  vacancy_js.py
